--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+<style>
+  button {
+    background-color: blue;
+    color: white;
+    border: none;
+    height: 36px;
+    border-radius: 18px;
+  }
+</style
+
+
+
+
+
 body {
   text-align: center;
   font-family: Arial;
